{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "56ae89f3-3f78-4cc1-b5b7-a656651b442a",
            "actions": [
                {
                    "name": "Attack1",
                    "type": "Button",
                    "id": "96b9f06f-cd1b-4b97-86a2-da4d466fc458",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "528307af-cf77-43f0-abd3-f52f75736e98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MovePlayer",
                    "type": "PassThrough",
                    "id": "8b417dab-1ec3-417e-8c57-a700214eb4ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveCamera",
                    "type": "PassThrough",
                    "id": "740d46a9-c6de-4b3e-afb8-ceeca1427fe9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "54179d9a-ef4e-45ed-9a26-a9e434ec1e0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Combo1",
                    "type": "Button",
                    "id": "413b5de3-b7ad-478b-961d-b769aad44842",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Combo2",
                    "type": "Button",
                    "id": "6b2155b4-605c-4019-ac84-247767d5f4b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Combo3",
                    "type": "Button",
                    "id": "99983d0f-4aee-424d-ac5f-630fc7455dd6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Combo4",
                    "type": "Button",
                    "id": "4cb7ac84-28f3-42b6-a339-6d8b621d8dca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Target",
                    "type": "Button",
                    "id": "e6c604b1-c8bb-4ded-bac9-16dfc34fbe77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "NextTarget",
                    "type": "Button",
                    "id": "1187bf0a-f7af-4abe-abd7-bb79bd26ae8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PreviousTarget",
                    "type": "Button",
                    "id": "4def6e91-6761-4a23-9ac7-4b8c7c8a56db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dd859f94-b969-474b-b7b1-011e84bc3387",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab47f632-0f2a-456f-a641-420a9f06d550",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15a0e286-617b-4b7f-9e40-76a0c00244bb",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "830b2953-e1d2-4561-a497-cc496ee952ea",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bdd5589-36ae-4b91-9a1b-7afe4c68bf82",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77df7a16-bed2-4284-bdfa-ce499e578c8d",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Combo1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5cfb6900-4c51-42cb-be95-db7776b0bc56",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Combo2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b11ec284-a1a4-4151-96f7-379ba8953a28",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Combo3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2e452aa9-bd5b-4e0d-8fd0-62b6a6d3f2a5",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Combo4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b37f3c29-dde3-40d6-869c-5c62919cc020",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Target",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6399c56-3a2d-4fc9-8734-b8082baa75e5",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acdd0ad5-3cc9-4262-bd6b-f386d35b30fd",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PreviousTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}